Started basic structures of all templates

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,3 +1,16 @@
 <div id="app container">
-  <h1>RepConnect!</h1>
+  <h1>RepConnect</h1>
+  <nav class="navbar">
+    <div>
+      <search></search>
+    </div>
+  </nav>
+  <div class="row">
+    <div>
+      <rep-profile></rep-profile>
+    </div>
+    <div>
+      <rep-list></rep-list>
+    </div>
+  </div>
 </div>
