Added user component and template Added basic code for all other components Added bootstrap classes to some elements

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,15 +1,20 @@
 <div id="app container">
-  <h1>RepConnect</h1>
+  <div>
+    <h1>RepConnect</h1>
+  </div>
   <nav class="navbar">
-    <div>
+    <div class="col-md-6">
+      <user></user>
+    </div>
+    <div class="col-md-6">
       <search></search>
     </div>
   </nav>
   <div class="row">
-    <div>
+    <div class="col-md-6">
       <rep-profile></rep-profile>
     </div>
-    <div>
+    <div class="col-md-6">
       <rep-list></rep-list>
     </div>
   </div>
