--- a/public/client/templates/repListEntry.html
+++ b/public/client/templates/repListEntry.html
@@ -1,8 +1,8 @@
-<li class="rep-list-entry">
-  <div>
+<li class="rep-list-entry media">
+  <div class="media-left">
     Photo
   </div>
-  <div>
+  <div class="media-body">
     <div>Title</div>
     <div>Name</div>
   </div>
