--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -1,5 +1,5 @@
 <div class="search">
   <form>
-    <input type="text"><button></button>
+    <input type="text"><button>Search</button>
   </form>
 </div>
