Implemented search and removed unnecessary package

--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -1,5 +1,6 @@
 <div class="search">
   <form>
-    <input type="text"><button>Search</button>
+    <input ng-model="ctrl.input" type="text">
+    <button ng-click="ctrl.getData()">Search</button>
   </form>
 </div>
