--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -7,7 +7,7 @@
       <user></user>
     </div>
     <div class="col-md-6">
-      <search></search>
+      <search search="ctrl.searcher" handle="ctrl.handleData"></search>
     </div>
   </nav>
   <div class="row">
