--- a/public/client/templates/repListEntry.html
+++ b/public/client/templates/repListEntry.html
@@ -1,9 +1,9 @@
 <li class="rep-list-entry media">
   <div class="media-left">
-    Photo
+    <img class="thumb" src={{ctrl.official.photoUrl}}>
   </div>
   <div class="media-body">
     <div>Title</div>
-    <div>Name</div>
+    <div>{{ctrl.official.name}}</div>
   </div>
 </li>
