Passed office data to repListEntry Passed selected official data to repProfile

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -12,10 +12,10 @@
   </nav>
   <div class="row">
     <div class="col-md-6">
-      <rep-profile></rep-profile>
+      <rep-profile selected="ctrl.selected"></rep-profile>
     </div>
     <div class="col-md-6">
-      <rep-list officials="ctrl.officials"></rep-list>
+      <rep-list offices="ctrl.offices" officials="ctrl.officials"></rep-list>
     </div>
   </div>
 </div>
