--- a/public/client/templates/repProfile.html
+++ b/public/client/templates/repProfile.html
@@ -1,6 +1,6 @@
 <div class="rep-profile">
-  <div>Photo</div>
+  <img src={{ctrl.selected.photoUrl}}>
   <div>Title</div>
-  <div>Name</div>
+  <div>{{ctrl.selected.name}}</div>
   <div>Contact Info/links</div>
 </div>
