--- a/public/client/templates/repList.html
+++ b/public/client/templates/repList.html
@@ -1,3 +1,3 @@
 <ul class="rep-list">
-  <rep-list-entry ng-repeat="official in ctrl.officials" official="official"></rep-list-entry>
+  <rep-list-entry offices="ctrl.offices" ng-repeat="official in ctrl.officials" official="official" index="$index"></rep-list-entry>
 </ul>
