--- a/public/client/templates/repListEntry.html
+++ b/public/client/templates/repListEntry.html
@@ -1,4 +1,4 @@
-<li class="rep-list-entry media">
+<li ng-click="ctrl.handleClick(ctrl.official, ctrl.index < 3 ? ctrl.index : ctrl.index - 1)" class="rep-list-entry media">
   <div class="media-left">
     <img class="thumb" src={{ctrl.official.photoUrl}}>
   </div>
