Changed img src to ng-src

--- a/public/client/templates/user.html
+++ b/public/client/templates/user.html
@@ -1,5 +1,6 @@
 <div class="user">
   <form>
-    <input type="text"><button>User</button>
+    <input type="text">
+    <button>User</button>
   </form>
 </div>
