--- a/public/client/templates/repListEntry.html
+++ b/public/client/templates/repListEntry.html
@@ -1,6 +1,6 @@
 <li ng-click="ctrl.handleClick(ctrl.official, ctrl.index < 3 ? ctrl.index : ctrl.index - 1)" class="rep-list-entry media">
   <div class="media-left">
-    <img class="thumb" src={{ctrl.official.photoUrl}}>
+    <img class="thumb" ng-src="{{ctrl.official.photoUrl}}">
   </div>
   <div class="media-body">
     <div>{{ctrl.offices[ctrl.index < 3 ? ctrl.index : ctrl.index - 1].name}}</div>
