Implemented saving addresses to db

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,5 +1,5 @@
 <div id="app container" ng-controller="AppCtrl">
-  <div>
+  <div class="col-md-12">
     <h1>RepConnect</h1>
   </div>
   <nav class="navbar">
