Changed user component to saved component

--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -4,10 +4,14 @@
   </div>
   <nav class="navbar">
     <div class="col-md-6">
-      <user></user>
+      <saved locations="ctrl.locations"></saved>
     </div>
     <div class="col-md-6">
-      <search civic-info="ctrl.civicInfo" handle-data="ctrl.handleData"></search>
+      <search
+      civic-info="ctrl.civicInfo"
+      handle-data="ctrl.handleData"
+      saved-locs="ctrl.savedLocs"
+      handle-locs="ctrl.handleLocs"></search>
     </div>
   </nav>
   <div class="row">
