--- a/public/client/templates/search.html
+++ b/public/client/templates/search.html
@@ -1,6 +1,6 @@
 <div class="search">
   <form>
     <input ng-model="ctrl.input" type="text">
-    <button ng-click="ctrl.getData()">Search</button>
+    <button ng-click="ctrl.getData(); ctrl.getLocs()">Search</button>
   </form>
 </div>
