Implemented dropdown for saved locations Need to fix duplicate entries getting saved to db

--- a/public/client/templates/saved.html
+++ b/public/client/templates/saved.html
@@ -1,8 +1,12 @@
 <div class="saved">
   <form>
     <label for="locationSelect"> Saved Locations: </label>
-    <select name="locationSelect" id="locationSelect" ng-model="ctrl.model">
-      <option ng-repeat="location in ctrl.locations" value="location">{{location}}</option>
+    <select
+    name="locationSelect"
+    id="locationSelect"
+    ng-model="ctrl.model"
+    ng-change="ctrl.getData()">
+      <option ng-repeat="location in ctrl.locations" value="{{location}}">{{location}}</option>
     </select>
   </form>
 </div>
