--- a/public/client/templates/app.html
+++ b/public/client/templates/app.html
@@ -1,17 +1,22 @@
-<div id="app container" ng-controller="AppCtrl">
+<div id="app container">
   <div class="col-md-12">
     <h1>RepConnect</h1>
   </div>
   <nav class="navbar">
     <div class="col-md-6">
-      <saved locations="ctrl.locations"></saved>
+      <saved
+      locations="ctrl.locations"
+      civic-info="ctrl.civicInfo"
+      handle-data="ctrl.handleData">
+      </saved>
     </div>
     <div class="col-md-6">
       <search
       civic-info="ctrl.civicInfo"
       handle-data="ctrl.handleData"
       saved-locs="ctrl.savedLocs"
-      handle-locs="ctrl.handleLocs"></search>
+      handle-locs="ctrl.handleLocs">
+      </search>
     </div>
   </nav>
   <div class="row">
