--- a/public/client/templates/repProfile.html
+++ b/public/client/templates/repProfile.html
@@ -1,4 +1,4 @@
-<div class="rep-profile media col-md-8">
+<div class="rep-profile media col-md-10">
   <div class="media-left">
     <img class="profile" src={{ctrl.selected.photoUrl}}>
   </div>
@@ -7,5 +7,6 @@
     <div>{{ctrl.selected.name}}</div>
     <div>{{ctrl.selected.party}}</div>
     <div ng-repeat="phone in ctrl.selected.phones">{{phone}}</div>
+    <div ng-repeat="email in ctrl.selected.emails">{{email}}</div>
   </div>
 </div>
